--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.2
+Flask==2.2.5
 Flask-WTF==1.1.1
 psycopg2-binary==2.9.6
-Werkzeug==2.3.4
+Werkzeug==2.2.3
 MarkupSafe==2.1.3
+email_validator==1.3.1
+gunicorn==20.1.0
